fix alignment

--- a/server/assets/css/main.css
+++ b/server/assets/css/main.css
@@ -426,7 +426,7 @@ input:focus{
     float: left;
 	font: normal 12px/40px Arial, sans-serif;
     height: 38px;
-	margin:2px 0px 2px 5px;
+	margin:2px 0px 2px 8px;
     text-align: center;
     width: 28px;
 }
